# cxbx

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Cxbe.dsp  Cxbx.dsp  Cxbx.dsw  CxbxKrnl.dsp  README.md  justfile  meson.build  meson_options.txt  pyproject.toml
Resource/: Cxbx.rc  CxbxDll.rc  Thumbs.db  launcher_resources.rc
cmake/: FindDirectX.cmake
cross/: i686-windows-clang.ini
docs/: README.md  changelog.md  developer.md  direct3d.md  input.md  kernel-test-suite.md  nv2a-pushbuffer-capture.md  removed-code.md  thanks.md  title-debugging-tooling.md  todo.md  xact-hle.md  (+1 more)
src/cxbx/: CMakeLists.txt  d3d8.def  meson.build
src/cxbx/src/core/: Error.cpp  Exe.cpp  OpenXDK.cpp  PcmConverter.cpp  Xbe.cpp  XboxAdpcmDecoder.cpp  Yuy2Converter.cpp  error.cpp  exe.cpp  nv2a_capture.cpp  open_xdk.cpp  pcm_converter.cpp  xbe.cpp  xbox_adpcm_decoder.cpp  yuy2_converter.cpp
src/cxbx/src/core/trace/: trace.cpp
src/cxbx/src/frontend/win32_legacy/: about_window.cpp  about_window.h  controller_config_dialog.cpp  controller_config_dialog.h  executable_prolog.cpp  executable_prolog.h  main_window.h  window.h  xbe_to_pe_converter.cpp  xbe_to_pe_converter.h
src/cxbx/src/hle/audio/: dsound_emulation.cpp  xact_emulation.cpp
src/cxbx/src/hle/d3d8/: d3d8_emulation.cpp
src/cxbx/src/hle/dispatch/: D3D8.1.0.4361.inl  D3D8.1.0.5233.inl  D3D8.1.0.5558.inl  D3D8.1.0.5659.inl  DSound.1.0.3911.inl  DSound.1.0.5233.inl  DSound.1.0.5344.inl  XOnline.1.0.5849.inl  Xapi.1.0.5233.inl  Xapi.1.0.5659.inl  Xapi.1.0.5849.inl  hle_database.cpp
src/cxbx/src/hle/kernel/: file_emulation.cpp
src/cxbx/src/hle/runtime/: emulation_runtime.cpp
src/cxbx/src/hle/xonline/: xonline_emulation.cpp
src/cxbx/src/hw/nv2a/: nv2a_device_state.cpp  nv2a_pfifo.cpp  nv2a_pgraph_combiner_state.cpp  nv2a_pgraph_draw_state.cpp  nv2a_pgraph_flip_state.cpp  nv2a_pgraph_render_state.cpp  nv2a_pgraph_semaphore_state.cpp  nv2a_pgraph_surface.cpp  nv2a_pgraph_texture_state.cpp  nv2a_pgraph_transform_state.cpp  nv2a_pgraph_vertex_state.cpp
src/cxbx/src/hw/nv2a/vsh/: vsh_cpu_device_state.cpp  vsh_cpu_device_state.h  vsh_decoder.cpp  vsh_decoder_internal.h  vsh_shader_registry.cpp  vsh_shader_registry.h
src/cxbx/src/platform/win32/: emulation_window_access.cpp  host_input_lifecycle.cpp  ntdll_emulation.cpp  shared_controller_config.cpp  shared_runtime_state.cpp  shared_runtime_state_launcher.cpp  shared_runtime_storage.cpp  shared_runtime_storage.h  shared_video_config.cpp  trace_os.cpp  trace_os.h
src/cxbx/src/platform/win32/guest_tls/: fs_emulation.cpp
src/cxbx/src/standard/Cxbe/: Main.cpp  main.cpp
src/cxbx/src/win32/: EmuShared.cpp  HostInput.cpp  Mutex.cpp  XBController.cpp  XBVideo.cpp  host_input.cpp  mutex.cpp  shared_runtime_storage.cpp  xbox_controller.cpp  xbox_video.cpp
src/cxbx/src/win32/Cxbx/: DlgControllerConfig.cpp  DlgVideoConfig.cpp  EmuExe.cpp  Prolog.cpp  WinMain.cpp  Wnd.cpp  WndAbout.cpp  WndMain.cpp  about_window.cpp  controller_config_dialog.cpp  main_window.cpp  video_config_dialog.cpp  win_main.cpp  window.cpp  xbe_to_pe_converter.cpp
src/cxbx/src/win32/CxbxKrnl/: D3D8.1.0.3911.inl  D3D8.1.0.4034.inl  D3D8.1.0.4627.inl  D3D8.1.0.5233.inl  D3D8.1.0.5344.inl  D3D8.1.0.5659.inl  D3D8.1.0.5788.inl  D3D8.1.0.5849.inl  D3D8D.1.0.5849.inl  D3D8I.1.0.5849.inl  DSound.1.0.3911.inl  DSound.1.0.4627.inl  DSound.1.0.5344.inl  DSound.1.0.5558.inl  DSound.1.0.5659.inl  DSound.1.0.5788.inl  DSound.1.0.5849.inl  DSound.1.0.5933.inl  Emu.cpp  EmuD3D8.cpp  EmuD3D8Conv.cpp  EmuDInput.cpp  EmuDSound.cpp  EmuDes.h  EmuFS.cpp  EmuFile.cpp  EmuKrnl.cpp  EmuKrnlLogging.h  EmuLDT.cpp  EmuNV2ALogging.h  EmuNtDll.cpp  EmuVshCpuDeviceState.cpp  EmuVshDecoder.cpp  EmuVshDecoder.h  EmuVshDecoderHost.cpp  EmuVshDecoderInternal.h  EmuVshDecoderLegacy.cpp  EmuVshDecoderRuntime.cpp  EmuVshShaderCreation.cpp  EmuVshShaderRegistry.cpp  (+40 more)
src/open-xdk/src/glibc/: CMakeLists.txt  meson.build
src/open-xdk/src/glibc/src/: __random.c  abs.c  atof.c  atoi.c  bsearch.c  div.c  labs.c  ldiv.c  malloc.c  mblen.c  mbstowcs.c  qsort.c  rand.c  random.c  srand.c  strtol.c
src/open-xdk/src/glibc/src/stdio/: snprintf.c
src/open-xdk/src/glibc/src/string/: __stpncpy.c  bcmp.c  bcopy.c  bzero.c  ffs.c  index.c  memccpy.c  memchr.c  memcmp.c  memcpy.c  memfrob.c  memmem.c  memmove.c  memset.c  rindex.c  stpcpy.c  stpncpy.c  strcasecmp.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strcspn.c  strdup.c  strfry.c  strlen.c  strncase.c  strncat.c  strncmp.c  strncpy.c  strpbrk.c  strrchr.c  strsep.c  strspn.c  strstr.c  strtok.c
src/open-xdk/src/xlibc/: CMakeLists.txt  meson.build
src/open-xdk/src/xlibc/src/math/: abs.c  acos.c  asin.c  atan.c  ceil.c  exp.c  fabs.c  floor.c  fmod.c  hypot.c  itoa.c  log.c  ltoa.c  malloc.c  misc_vars.c  pow.c  rand.c  sincos.c  sqrt.c  tan.c
src/open-xdk/src/xlibc/src/math/stdio/: file_io.c  sprintf.c
src/open-xdk/src/xlibc/src/math/string/: __memccpy.c  memcmp.c  memcpy.c  memset.c  strcat.c  strcmp.c  strcpy.c  strlen.c  strncat.c  strncmp.c
src/open-xdk/src/xusb/: CMakeLists.txt  meson.build
src/open-xdk/src/xusb/src/core/: buffer_simple.c  config.c  hcd-pci.c  hcd.c  usb-debug.c
src/open-xdk/src/xusb/src/sys/: linuxwrapper.c
src/open-xdk/src/xvga/: CMakeLists.txt  meson.build
src/open-xdk/src/xvga/src/: xvga.c  xvga_tables.c
tests/host/: asan_runtime_probe.cpp  asan_runtime_probe.py  d3d_present.cpp  d3d_push_buffer.cpp  fs_content_swap_policy.cpp  input_translation.cpp  meson.build  nv2a_capture.cpp  nv2a_device_state.cpp  nv2a_pfifo.cpp  nv2a_pgraph_combiner_state.cpp  nv2a_pgraph_draw_state.cpp  nv2a_pgraph_flip_state.cpp  nv2a_pgraph_render_state.cpp  nv2a_pgraph_semaphore_state.cpp  nv2a_pgraph_surface.cpp  nv2a_pgraph_texture_state.cpp  nv2a_pgraph_transform_state.cpp  nv2a_pgraph_vertex_state.cpp  nv2a_raster.cpp  nvnet.cpp  pcm_conversion.cpp  psh_translate.cpp  stack_precommit.cpp  trace_benchmark.cpp  trace_core.cpp  trace_durability.py  trace_durability_helper.cpp  trace_ring.cpp  vsh_recompiler.cpp  xbox_adpcm.cpp  yuy2_conversion.cpp
(+499 files in other folders)
