option(
  'build_xusb',
  type : 'boolean',
  value : false,
  description : 'Build and link the legacy open-xdk xusb OHCI stack.',
)

option(
  'build_xiso',
  type : 'boolean',
  value : true,
  description : 'Build the xiso host tool (Xbox XISO list/extract/create/verify).',
)

option(
  'build_host_asan',
  type : 'boolean',
  value : false,
  description : 'Build only the native x86_64 Clang ASan host-test lane.',
)
